--- a/css.css
+++ b/css.css
@@ -186,7 +186,7 @@ li.item-p-i:hover{
     width: 420PX;
     height: 490PX;
     background-color: white;
-    border-radius: 15px;
+    border-radius: 10px;
 }
 .txt-signin{font-family: 'montserrat',sans-serif;font-size: 25pt;margin: 15% 0px 15% 0px;}
 .box-log{
@@ -388,7 +388,133 @@ textarea:focus{
     width: 100%;
     height: 540px;
 }
-
+.div-slider{
+    width: 100%;
+    height: 100%;
+    text-align: center;
+}
+.slides-front {
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    display: block;
+    margin: auto;
+    position: relative;
+}
+.slides-front * {
+    user-select: none;
+    -ms-user-select: none;
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+}
+.slides-front input { display: none; } .slide-container { display: block; }
+.slide {
+    top: 0;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    /* display: block; */
+    position: absolute;
+}
+.img-box-1{
+    width: 100%;
+    height: 100%;
+    background-image: url(img/high-school-ph.jpg);
+    background-size: cover;
+    background-position-x: center;
+    background-position-y: center;
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.img-box-1 h1{
+    color: #FFF;
+    font-size: 50pt;
+    text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
+    font-family: 'Montserrat', sans-serif;
+}
+.img-box-1 p{
+    color: #FFF;
+    font-size: 15pt;
+    text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
+    font-family: 'Montserrat', sans-serif;
+}
+.img-box-2{
+    width: 100%;
+    height: 100%;
+    background-image: url(img/infoimage.png);
+    background-size: cover;
+    background-position-x: center;
+    background-position-y: center;
+}
+.img-box-3{
+    width: 100%;
+    height: 100%;
+    background-image: url(img/fotografia-curso.jpg);
+    background-size: cover;
+    background-position-x: center;
+    background-position-y: center;
+}
+.img-box-4{
+    width: 100%;
+    height: 100%;
+    background-image: url(img/banner-lang.png);
+    background-size: cover;
+    background-position-x: center;
+    background-position-y: center;
+}
+.nav label {
+    width: 125px;
+    height: 100%;
+    display: none;
+    position: absolute;
+    opacity: 0;
+    z-index: 9;
+    cursor: pointer;
+    transition: opacity .1s;
+    color: #FFF;
+    font-size: 140pt;
+    text-align: center;
+    line-height: 550px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif, sans-serif;
+    text-shadow: 0px 0px 15px rgb(119, 119, 119);
+}
+.slide:hover + .nav label {opacity: 0.5;} .nav label:hover {opacity: 1;}.nav .next {right: 0;} 
+input:checked + .slide-container  .slide {opacity: 1;} 
+input:checked + .slide-container .nav label {display: block;}
+.nav-dots {
+    width: 100%;
+    bottom: 0;
+    height: 2%;
+    display: block;
+    position: relative;
+    text-align: center;
+}
+.nav-dots .nav-dot{
+    top: 4700%;
+    width: 15px;
+    height: 15px;
+    margin: 0 4px;
+    position: relative;
+    border-radius: 100%;
+    display: inline-block;
+    background-color: rgba(0, 0, 0, 0.6);
+    border: 2px solid rgb(151, 151, 151);
+}
+.nav-dots .nav-dot:hover {
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.8);
+    box-shadow: 0px 0px 15px rgba(255, 255, 255, 0.9);
+}
+input#img-1:checked ~ .nav-dots label#img-dot-1
+input#img-2:checked ~ .nav-dots label#img-dot-2,
+input#img-3:checked ~ .nav-dots label#img-dot-3{
+    background: rgba(0, 0, 0, 0.8);
+}
 /*HMODULE 2*/
 .module-2{
     background-color: rgb(255, 255, 255);
@@ -407,7 +533,7 @@ textarea:focus{
     justify-content: center;
     align-items: center;
     background-color: rgb(0, 0, 0);
-    border-radius: 15px;
+    border-radius: 10px;
 }
 .sub-mdl-2-1{
     width: 50%;
@@ -420,7 +546,7 @@ textarea:focus{
     background-color: rgb(0, 0, 0);
     background-size: 600px;
     background-position: center;
-    border-radius: 15px;
+    border-radius: 10px;
 }
 .sub-mdl-2-1 h1{
     font-family: 'montserrat', sans-serif;
@@ -699,7 +825,7 @@ i:hover{
     background: #ffffff;
     z-index: 999999;
     display: none;
-    border-radius: 15px;
+    border-radius: 10px;
     box-shadow: 0px 0px 40px rgb(0, 0, 0,0.3);
 }
 .popup-wp a{
@@ -730,7 +856,7 @@ i:hover{
     justify-content: center;
     align-items: center;
     background-color: rgb(0, 0, 0);
-    border-radius: 15px;
+    border-radius: 10px;
 }
 .sub-mdl-wp-s-1{
     width: 50%;
@@ -759,7 +885,7 @@ i:hover{
     background-size: cover;
     background-position-x: center;
     background-position-y: center;
-    border-radius: 15px;
+    border-radius: 10px;
 }
 /*FUNDAMENTAL II PAGE*/
 .popup-ef2{
@@ -773,7 +899,7 @@ i:hover{
     background: #ffffff;
     z-index: 999999;
     display: none;
-    border-radius: 15px;
+    border-radius: 10px;
     box-shadow: 0px 0px 40px rgb(0, 0, 0,0.3);
   }
   .popup-ef2 a{
@@ -804,7 +930,7 @@ i:hover{
     justify-content: center;
     align-items: center;
     background-color: rgb(245, 245, 245);
-    border-radius: 15px;
+    border-radius: 10px;
     border-left: 5px solid rgb(255, 0, 0);
 }
 .sub-mdl-ef2-s-1{
@@ -835,7 +961,7 @@ i:hover{
     background-size: cover;
     background-position-x: center;
     background-position-y: 394px;
-    border-radius: 15px;
+    border-radius: 10px;
 }
 /*MÉDIO PAGE*/
 .popup-em{
@@ -849,7 +975,7 @@ i:hover{
     background: #ffffff;
     z-index: 999999;
     display: none;
-    border-radius: 15px;
+    border-radius: 10px;
     box-shadow: 0px 0px 40px rgb(0, 0, 0,0.3);
 }
 .popup-em a{
@@ -880,7 +1006,7 @@ i:hover{
     justify-content: center;
     align-items: center;
     background-color: rgb(0, 0, 60);
-    border-radius: 15px;
+    border-radius: 10px;
     border-left: 5px solid rgb(255, 0, 0);
 }
 .sub-mdl-em-s-1{
@@ -909,7 +1035,7 @@ i:hover{
     background-size: cover;
     background-position-x: center;
     background-position-y: 376px;
-    border-radius: 15px;
+    border-radius: 10px;
 }
 /*PILARES*/
 .module-pl-1,.module-pl-3{
@@ -929,7 +1055,7 @@ i:hover{
     justify-content: center;
     align-items: center;
     background-color: rgb(245, 245, 245);
-    border-radius: 15px;
+    border-radius: 10px;
 }
 .sub-mdl-pl-1-1,.sub-mdl-pl-3-1{
     width: 50%;
@@ -969,7 +1095,7 @@ i:hover{
     background-size: cover;
     background-position-x: center;
     background-position-y: center;
-    border-radius: 15px;
+    border-radius: 10px;
 }
 .sub-mdl-pl-3-2{
     width: 50%;
@@ -979,7 +1105,7 @@ i:hover{
     background-size: cover;
     background-position-x: center;
     background-position-y: center;
-    border-radius: 15px;
+    border-radius: 10px;
 }
 .module-pl-2{
     background-color: rgb(255, 255, 255);
@@ -998,7 +1124,7 @@ i:hover{
     justify-content: center;
     align-items: center;
     background-color: rgb(245, 245, 245);
-    border-radius: 15px;
+    border-radius: 10px;
 }
 .sub-mdl-pl-2-1{
     width: 50%;
@@ -1039,7 +1165,7 @@ i:hover{
     background-size: cover;
     background-position-x: center;
     background-position-y: center;
-    border-radius: 15px;
+    border-radius: 10px;
     float: left;
 }
 /*PROJETOS*/
@@ -1060,7 +1186,7 @@ i:hover{
     justify-content: center;
     align-items: center;
     background-color: rgb(0, 0, 0);
-    border-radius: 15px;
+    border-radius: 10px;
 }
 .sub-mdl-pj-1-1,.sub-mdl-pj-3-1{
     width: 50%;
@@ -1091,7 +1217,7 @@ i:hover{
     background-size: cover;
     background-position-x: center;
     background-position-y: center;
-    border-radius: 15px;
+    border-radius: 10px;
 }
 .sub-mdl-pj-3-2{
     width: 50%;
@@ -1100,7 +1226,7 @@ i:hover{
     background-size: 500px 350px;
     background-position-x: center;
     background-position-y: center;
-    border-radius: 15px;
+    border-radius: 10px;
 }
 .module-pj-2,.module-pj-4{
     background-color: rgb(255, 255, 255);
@@ -1119,7 +1245,7 @@ i:hover{
     justify-content: center;
     align-items: center;
     background-color: rgb(0, 0, 0);
-    border-radius: 15px;
+    border-radius: 10px;
 }
 .sub-mdl-pj-2-1,.sub-mdl-pj-4-1{
     width: 50%;
@@ -1150,7 +1276,7 @@ i:hover{
     background-size: 500px 300px;
     background-position-x: center;
     background-position-y: center;
-    border-radius: 15px;
+    border-radius: 10px;
     float: left;
 }
 .sub-mdl-pj-4-2{
@@ -1160,7 +1286,7 @@ i:hover{
     background-size: 500px 300px;
     background-position-x: center;
     background-position-y: center;
-    border-radius: 15px;
+    border-radius: 10px;
     float: left;
 }
 /*@media login*/
